--- a/examples/aa-rn-demo/package.json
+++ b/examples/aa-rn-demo/package.json
@@ -71,6 +71,7 @@
     "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-localization": "^2.3.1",
     "react-native-paper": "^5.10.6",
+    "react-native-passkey": "^2.1.1",
     "react-native-permissions": "^3.10.0",
     "react-native-popup-menu": "^0.16.1",
     "react-native-progress": "^5.0.0",
