--- a/examples/aa-rn-demo/ios/AccountKitBoilerplate/Info.plist
+++ b/examples/aa-rn-demo/ios/AccountKitBoilerplate/Info.plist
@@ -24,6 +24,8 @@
 	<string>$(CURRENT_PROJECT_VERSION)</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSFaceIDUsageDescription</key>
+	<string>$(CFBundleDisplayName) requires FaceID access to allows you quick and secure access.</string>
 	<key>NSAppTransportSecurity</key>
 	<dict>
 		<key>NSExceptionDomains</key>
