--- a/examples/aa-rn-demo/package.json
+++ b/examples/aa-rn-demo/package.json
@@ -62,6 +62,7 @@
     "react-native-encrypted-storage": "^4.0.3",
     "react-native-extra-dimensions-android": "^1.2.5",
     "react-native-fast-image": "^8.6.3",
+    "react-native-fingerprint-scanner": "^6.0.0",
     "react-native-gesture-handler": "^2.13.2",
     "react-native-get-random-values": "^1.9.0",
     "react-native-inappbrowser-reborn": "^3.7.0",
