--- a/examples/aa-rn-demo/package.json
+++ b/examples/aa-rn-demo/package.json
@@ -30,6 +30,9 @@
     "@rneui/themed": "^4.0.0-rc.8",
     "@toruslabs/openlogin": "^5.3.0",
     "@tradle/react-native-http": "^2.0.1",
+    "@turnkey/api-key-stamper": "^0.1.1",
+    "@turnkey/http": "^2.0.0",
+    "@turnkey/viem": "^0.2.6",
     "alchemy-sdk": "^2.10.1",
     "assert": "^2.1.0",
     "axios": "^1.5.1",
