--- a/examples/aa-rn-demo/ios/AccountKitBoilerplate/AccountKitBoilerplate.entitlements
+++ b/examples/aa-rn-demo/ios/AccountKitBoilerplate/AccountKitBoilerplate.entitlements
@@ -5,6 +5,7 @@
 	<key>com.apple.developer.associated-domains</key>
 	<array>
 		<string>webcredentials:pro-2222691137476152292.frontendapi.corbado.io</string>
+		<string>webcredentials:api.turnkey.com</string>
 	</array>
 </dict>
 </plist>
