feat: deep link integration

--- a/examples/aa-rn-demo/package.json
+++ b/examples/aa-rn-demo/package.json
@@ -144,7 +144,8 @@
     "react-native-codegen": "0.71.5",
     "react-native-svg-transformer": "^1.1.0",
     "react-test-renderer": "^18.2.0",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "uri-scheme": "^1.1.0"
   },
   "workspaces": {
     "nohoist": [
