--- a/packages/alchemy/package.json
+++ b/packages/alchemy/package.json
@@ -39,6 +39,7 @@
     "test:run-e2e": "vitest run --config vitest.config.e2e.ts"
   },
   "devDependencies": {
+    "@alchemy/aa-accounts": "^1.2.0",
     "@alchemy/aa-core": "^1.2.0",
     "typescript": "^5.0.4",
     "typescript-template": "*",
