--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   ],
   "scripts": {
     "generate": "lerna run generate && yarn lint:write",
-    "build": "lerna run build --ignore=alchemy-daapp --ignore=aa-simple-dapp",
+    "build": "lerna run build --ignore=alchemy-daapp --ignore=aa-simple-dapp; yarn lint:write",
     "build:examples": "lerna run build",
     "clean": "lerna run clean",
     "test": "lerna run test:run",
